--- a/index/templates/ranking.html
+++ b/index/templates/ranking.html
@@ -21,7 +21,7 @@
 			<div colspan="2" class="title">팀</div>
 			{% for ranking in ranking_list_team %}
 			<div class="team">
-				<div class="team_img"><img src="{% static 'img/teams/2024spring/'|add:ranking.tricode|add:'.webp' %}"></div>
+				<div class="team_img"><img src="{% static 'img/teams/'|add:league|add:'/'|add:ranking.tricode|add:'.webp' %}"></div>
 				<div class="team_name">{{ranking.team}}</div>
 			</div>
 			{% endfor %}
@@ -29,13 +29,13 @@
 		<div class="team_ranking_block team_ranking_block3">
 			<div class="title">승리</div>
 			{% for ranking in ranking_list_team %}
-			<div class="game_win">{{ranking.game_win}}</div>
+			<div class="match_win">{{ranking.match_win}}</div>
 			{% endfor %}
 		</div>
 		<div class="team_ranking_block team_ranking_block3">
 			<div class="title">패배</div>
 			{% for ranking in ranking_list_team %}
-			<div class="game_lose">{{ranking.game_lose}}</div>
+			<div class="match_lose">{{ranking.match_lose}}</div>
 			{% endfor %}
 		</div>
 		<div class="team_ranking_block team_ranking_block3">
@@ -80,7 +80,7 @@
 			</tr>
 			{% for player in ranking_list_player %}
 			<tr>
-				<td>{{player.ranking}}</td><td>{{player.name}}</td><td>{{player.nickname}}</td><td><img src="{% static 'img/teams/2024spring/'|add:player.team_tricode|add:'.webp' %}"></td><td>{{player.team}}</td><td><img class="player_ranking_block_position" src="{% static 'img/position/'|add:player.position|add:'_black.webp' %}"></td><td>{{player.POG_point}}</td>
+				<td>{{player.ranking}}</td><td>{{player.name}}</td><td>{{player.nickname}}</td><td><img src="{% static 'img/teams/'|add:league|add:'/'|add:player.team_tricode|add:'.webp' %}"></td><td>{{player.team}}</td><td><img class="player_ranking_block_position" src="{% static 'img/position/'|add:player.position|add:'_black.webp' %}"></td><td>{{player.POG_point}}</td>
 			</tr>
 			{% endfor %}
 		</table>
