--- a/index/templates/champion.html
+++ b/index/templates/champion.html
@@ -12,7 +12,7 @@
 		<div id="league_selection">
 			<a href="/champion?year=2024&league=LCK Spring&patch=all" class="league LCK_Spring activated"><img src="{% static 'img/league_logo/LCK2.svg' %}">LCK spring</a>
 			<a href="/champion?year=2024&league=MSI&patch=14.8" class="league MSI activated"><img src="{% static 'img/league_logo/MSI.png' %}">MSI</a>
-			<a class="league LCK_summer"><img src="{% static 'img/league_logo/LCK2.svg' %}">LCK summer</a>
+			<a href="/champion?year=2024&league=LCK Summer&patch=14.11" class="league LCK_Summer activated"><img src="{% static 'img/league_logo/LCK2.svg' %}">LCK summer</a>
 			<a class="league Worlds"><img src="{% static 'img/league_logo/Worlds.png' %}">Worlds</a>
 		</div>
 		
@@ -27,7 +27,11 @@
 			<a class="patch" href="/champion?year=2024&league=MSI&patch={{patch}}">{{patch}}</a>
 			{% endfor %}
 		</div>
-		<div class="patch_selection LCK_summer">
+		<div class="patch_selection LCK_Summer">
+			<a class="patch all" href="/champion?year=2024&league=LCK Summer&patch=all">모든 버전</a>
+			{% for patch in patch_list_summer %}
+			<a class="patch" href="/champion?year=2024&league=LCK Summer&patch={{patch}}">{{patch}}</a>
+			{% endfor %}
 		</div>
 		<div class="patch_selection Worlds">
 		</div>
