--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -25,7 +25,10 @@
 			{% else %}
 				{% for champion in champions %}
 				<tr>
-					<td><img class="champion_img" src="{% static 'img/champions'|add:'/'|add:champion.name|add:'.png' %}"></td><td>{{champion.name}}</td><td>{{champion.pick}}</td><td>{{champion.ban}}</td><td>{{champion.banpick_rate}}%</td><td>{{champion.win}}</td><td>{{champion.lose}}</td><td>{{champion.win_rate}}%</td>
+					<td>
+						<img class="champion_img" src="{% static 'img/champions'|add:'/'|add:champion.name|add:'.png' %}">
+					</td>
+					<td>{{champion.name}}</td><td>{{champion.pick}}</td><td>{{champion.ban}}</td><td>{{champion.banpick_rate}}%</td><td>{{champion.win}}</td><td>{{champion.lose}}</td><td>{{champion.win_rate}}%</td>
 				</tr>
 				{% endfor %}
 			{% endif %}
@@ -44,7 +47,11 @@
 			{% for schedule in schedules %}
 			<div class="schedule_match schedule_date_{{schedule.date|date:'Y'}}{{schedule.date|date:'m'}}{{schedule.date|date:'d'}}">
 				<div class="schedule_team schedule_team1">
+					{% if "TBD" in schedule.team1_tricode %}
+					<img class="team_img team1_img" src="{% static 'img/teams/TBD.webp' %}"><br>
+					{% else %}
 					<img class="team_img team1_img" src="{% static 'img/teams/'|add:schedule.tournament|add:'/'|add:schedule.team1_tricode|add:'.webp' %}"><br>
+					{% endif %}
 					<span class="schedule_team_name schedule_team1_name">{{schedule.team1_name}}</span>
 				</div>
 				<div class="schedule_score_block">
@@ -52,7 +59,11 @@
 					<div class="schedule_time">{{schedule.date|date:'a'}}<br>{{schedule.date|date:'g'}}시 {{schedule.date|date:'i'}}분</div>
 				</div>
 				<div class="schedule_team schedule_team2">
+					{% if "TBD" in schedule.team2_tricode %}
+					<img class="team_img team2_img" src="{% static 'img/teams/TBD.webp' %}"><br>
+					{% else %}
 					<img class="team_img team2_img" src="{% static 'img/teams/'|add:schedule.tournament|add:'/'|add:schedule.team2_tricode|add:'.webp' %}"><br>
+					{% endif %}
 					<span class="schedule_team_name schedule_team2_name">{{schedule.team2_name}}</span>
 				</div>
 			</div>
