--- a/index/templates/include/footer.html
+++ b/index/templates/include/footer.html
@@ -1,5 +1,9 @@
 <!-- footer -->
 <footer>
+	<p>
+        LCKinfo.lol은 <a href="https://creativecommons.org/licenses/by-sa/3.0/" style="color: #40C1FF; text-decoration: underline;">CC BY-SA 3.0</a>에 따라 라이선스된 데이터를 사용합니다.<br>
+        데이터 소스 : <a href="https://lol.fandom.com/wiki/League_of_Legends_Esports_Wiki" style="color: #40C1FF; text-decoration: underline;">Leaguepedia | League of Legends Esports Wiki</a><br>
+        이 데이터를 수정하거나 재배포하는 경우, 동일한 CC BY-SA 3.0 라이선스로 배포해야 합니다.
+    </p>
 	<address>문의/오류제보<br>hs1261101@gmail.com</address>
-	<p>Copyright©2024.명품개발자지망생.All Right Reserved</p>
 </footer>
