--- a/index/templates/history_contents/winter/12-13.html
+++ b/index/templates/history_contents/winter/12-13.html
@@ -109,7 +109,7 @@
 			</tr>
 			<tr>
 				<td style="background-color: #ccffcc;">4</td>
-				<td><img src="{% static 'img/teams/LCK 2013 Winter/KT_Rolster_A.webp' %}"></td>
+				<td><img src="{% static 'img/teams/LCK 2013 Winter/kt_Rolster_A.webp' %}"></td>
 				<td>KT Rolster A</td>
 				<td>8</td>
 				<td>1</td>
@@ -119,8 +119,8 @@
 			</tr>
 			<tr>
 				<td style="background-color: #ffcccc;">5</td>
-				<td><img src="{% static 'img/teams/LCK 2013 Winter/Najin_Shield.webp' %}"></td>
-				<td>Najin Shield</td>
+				<td><img src="{% static 'img/teams/LCK 2013 Winter/NaJin_Shield.webp' %}"></td>
+				<td>NaJin Shield</td>
 				<td>6</td>
 				<td>1</td>
 				<td>3</td>
@@ -156,7 +156,7 @@
 			<th>순위</th><th colspan="2">팀</th><th>승점</th><th>승</th><th>무</th><th>패</th><th>기타</th>
 			<tr>
 				<td style="background-color: #eeccee;">1</td>
-				<td><img src="{% static 'img/teams/LCK 2013 Winter/KT_Rolster_B.webp' %}"></td>
+				<td><img src="{% static 'img/teams/LCK 2013 Winter/kt_Rolster_B.webp' %}"></td>
 				<td>KT Rolster B</td>
 				<td>16</td>
 				<td>5</td>
@@ -166,8 +166,8 @@
 			</tr>
 			<tr>
 				<td style="background-color: #aaddff;">2</td>
-				<td><img src="{% static 'img/teams/LCK 2013 Winter/AZUBU_Blaze.webp' %}"></td>
-				<td>AZUBU Blaze</td>
+				<td><img src="{% static 'img/teams/LCK 2013 Winter/Azubu_Blaze.webp' %}"></td>
+				<td>Azubu Blaze</td>
 				<td>13</td>
 				<td>4</td>
 				<td>1</td>
@@ -176,8 +176,8 @@
 			</tr>
 			<tr>
 				<td style="background-color: #97ECAB;">3</td>
-				<td><img src="{% static 'img/teams/LCK 2013 Winter/Najin_Sword.webp' %}"></td>
-				<td>Najin Sword</td>
+				<td><img src="{% static 'img/teams/LCK 2013 Winter/NaJin_Sword.webp' %}"></td>
+				<td>NaJin Sword</td>
 				<td>10</td>
 				<td>3</td>
 				<td>1</td>
@@ -405,8 +405,8 @@
 			<th>순위</th><th colspan="2">팀</th><th colspan="2">선수</th><th>포인트</th><th>포지션</th>
 			<tr>
 				<td style="background-color: #aaddff;">1</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/LCK 2013 Winter/Najin_Sword.webp' %}"></td>
-				<td>Najin Sword</td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/LCK 2013 Winter/NaJin_Sword.webp' %}"></td>
+				<td>NaJin Sword</td>
 				<td>MaKNooN</td>
 				<td>윤하운</td>
 				<td>1900</td>
@@ -414,8 +414,8 @@
 			</tr>
 			<tr>
 				<td>2</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/LCK 2013 Winter/Najin_Sword.webp' %}"></td>
-				<td>Najin Sword</td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/LCK 2013 Winter/NaJin_Sword.webp' %}"></td>
+				<td>NaJin Sword</td>
 				<td>SSONG</td>
 				<td>김상수</td>
 				<td>1400</td>
@@ -423,8 +423,8 @@
 			</tr>
 			<tr>
 				<td>3</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/LCK 2013 Winter/Najin_Sword.webp' %}"></td>
-				<td>Najin Sword</td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/LCK 2013 Winter/NaJin_Sword.webp' %}"></td>
+				<td>NaJin Sword</td>
 				<td>Pray</td>
 				<td>김종인</td>
 				<td>1200</td>
@@ -441,7 +441,7 @@
 			</tr>
 			<tr>
 				<td>5</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/LCK 2013 Winter/KT_Rolster_B.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/LCK 2013 Winter/kt_Rolster_B.webp' %}"></td>
 				<td>KT Rolster B</td>
 				<td>Ryu</td>
 				<td>류상욱</td>
@@ -468,7 +468,7 @@
 			</tr>
 			<tr>
 				<td>7</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/LCK 2013 Winter/KT_Rolster_B.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/LCK 2013 Winter/kt_Rolster_B.webp' %}"></td>
 				<td>KT Rolster B</td>
 				<td>KAKAO</td>
 				<td>이병권</td>
