--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -70,7 +70,7 @@
 }
 
 #schedule #schedule_block .schedule_match {
-	display: none;
+	display: flex;
 	justify-content: center;
 	align-items: center;
 	min-height: 100px;
