--- a/index/templates/include/head.html
+++ b/index/templates/include/head.html
@@ -21,4 +21,6 @@
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9052803485032468"
      crossorigin="anonymous"></script>
 	<meta name="google-site-verification" content="PKk12wktKkx1vVt-dXfIx4p3poJnxnpIdHGDOmuluug" />
+	
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
