--- a/index/templates/history_contents/Worlds/23.html
+++ b/index/templates/history_contents/Worlds/23.html
@@ -15,8 +15,8 @@
 					우승팀
 				</div>
 				<div id="winner_team_content">
-					<img src="{% static 'img/teams/2023Worlds/GEN.webp' %}">
-					<div id="winner_team_name">GEN.G</div>
+					<img src="{% static 'img/teams/Worlds 2023/T1.webp' %}">
+					<div id="winner_team_name">T1</div>
 				</div>
 			</div>
 			<div id="winner_coach">
@@ -31,7 +31,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Doran 최현준</div>
 				</div>
 				<div class="winner_player">
@@ -70,144 +70,44 @@
 		</div>
 	</section>
 
-	<section id="regular_season">
-		<h2>정규시즌</h2>
-		<table id="regular_season_table">
-			<colgroup>
-				<col style="width: 100px;">
-				<col style="width: 150px;">
-				<col style="width: 250px;">
-			</colgroup>
-			<th>순위</th><th colspan="2">팀</th><th>승</th><th>패</th><th>세트 득실</th><th>득실차</th><th>기타</th>
-			<tr>
-				<td style="background-color: #aaddff;">1</td>
-				<td><img src="{% static 'img/teams/2023Worlds/GEN.webp' %}"></td>
-				<td>Gen.G</td>
-				<td>17</td>
-				<td>1</td>
-				<td>35승 5패</td>
-				<td>+30</td>
-				<td>우승</td>
-			</tr>
-			<tr>
-				<td style="background-color: #aaddff;">2</td>
-				<td><img src="{% static 'img/teams/2023Worlds/T1.webp' %}"></td>
-				<td>T1</td>
-				<td>15</td>
-				<td>3</td>
-				<td>31승 13패</td>
-				<td>+18</td>
-				<td>준우승</td>
-			</tr>
-			<tr>
-				<td style="background-color: #97ECAB;">3</td>
-				<td><img src="{% static 'img/teams/2023Worlds/LSB.webp' %}"></td>
-				<td>Liiv SANDBOX</td>
-				<td>13</td>
-				<td>5</td>
-				<td>27승 14패</td>
-				<td>+13</td>
-				<td> - </td>
-			</tr>
-			<tr>
-				<td style="background-color: #97ECAB;">4</td>
-				<td><img src="{% static 'img/teams/2023Worlds/DK.webp' %}"></td>
-				<td>DWG KIA</td>
-				<td>10</td>
-				<td>8</td>
-				<td>24승 17패</td>
-				<td>+7</td>
-				<td> - </td>
-			</tr>
-			<tr>
-				<td style="background-color: #97ECAB;">5</td>
-				<td><img src="{% static 'img/teams/2023Worlds/KT.webp' %}"></td>
-				<td>kt Rolster</td>
-				<td>10</td>
-				<td>8</td>
-				<td>25승 20패</td>
-				<td>+5</td>
-				<td> - </td>
-			</tr>
-			<tr>
-				<td style="background-color: #97ECAB;">6</td>
-				<td><img src="{% static 'img/teams/2023Worlds/DRX.webp' %}"></td>
-				<td>DRX</td>
-				<td>9</td>
-				<td>9</td>
-				<td>22승 23패</td>
-				<td>-1</td>
-				<td> - </td>
-			</tr>
-			<tr>
-				<td style="background-color: #FFFF99;">7</td>
-				<td><img src="{% static 'img/teams/2023Worlds/KDF.webp' %}"></td>
-				<td>KWANGDONG FREECS</td>
-				<td>6</td>
-				<td>12</td>
-				<td>13승 29패</td>
-				<td>-16</td>
-				<td> - </td>
-			</tr>
-			<tr>
-				<td style="background-color: #FFFF99;">8</td>
-				<td><img src="{% static 'img/teams/2023Worlds/NS.webp' %}"></td>
-				<td>NongShim RedForce</td>
-				<td>5</td>
-				<td>13</td>
-				<td>14승 28패</td>
-				<td>-14</td>
-				<td> - </td>
-			</tr>
-			<tr>
-				<td style="background-color: #FFFF99;">9</td>
-				<td><img src="{% static 'img/teams/2023Worlds/BRO.webp' %}"></td>
-				<td>Fredit BRION</td>
-				<td>3</td>
-				<td>15</td>
-				<td>11승 31패</td>
-				<td>-20</td>
-				<td> - </td>
-			</tr>
-			<tr>
-				<td style="background-color: #FFFF99;">10</td>
-				<td><img src="{% static 'img/teams/2023Worlds/HLE.webp' %}"></td>
-				<td>Hanwha Life Esports</td>
-				<td>2</td>
-				<td>16</td>
-				<td>12승 34패</td>
-				<td>-22</td>
-				<td> - </td>
-			</tr>
-		</table>
-		<div class="reference">
-			<div class="reference_border">
-				<div class="reference_element reference_element_type_color">
-					<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : PO 2라운드 진출 &nbsp;</span>
+	<section id="playin">
+		<h2>플레이인 스테이지</h2>
+		<div class="playin_table">
+			<div class="playin_round">
+				<div class="playin_block">
+					<div class="playin_index"></div>
+					<div class="playin_team"></div>
+					<div class="playin_team"></div>
 				</div>
-				<div class="reference_element reference_element_type_color">
-					<div class="reference_color" style="background-color: #97ECAB"></div><span class="reference_letter"> : PO 1라운드 진출 &nbsp;</span>
-				</div>
-				<div class="reference_element reference_element_type_color">
-					<div class="reference_color" style="background-color: #FFFF99"></div><span class="reference_letter"> : PO 진출 실패 &nbsp;</span>
+				<div class="playin_block">
+					<div class="playin_index"></div>
+					<div class="playin_team"></div>
+					<div class="playin_team"></div>
 				</div>
 			</div>
+			<div class="blanc"></div>
+			<div class="playin_round"></div>
+			<div class="blanc"></div>
+			<div class="playin_round"></div>
+		</div>
+		<div class="playin_table">
+			
 		</div>
 	</section>
 
-	<section id="post_season">
+	<section id="swiss">
 		<h2>포스트시즌</h2>
 		<div id="post_season_table">
 			<div class="post_season_round">
 				<div class="post_season_block" style="margin-bottom: 50px;">
 					<div class="post_season_index">PO 1라운드 1경기<br>(Bo5)</div>
 					<div class="post_season_team win">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2023Worlds/LSB.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/Worlds 2023/LSB.webp' %}"></div>
 						<div class="post_season_team_name">LSB</div>
 						<div class="post_season_team_score">3</div>
 					</div>
 					<div class="post_season_team lose">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2023Worlds/DRX.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/Worlds 2023/DRX.webp' %}"></div>
 						<div class="post_season_team_name">DRX</div>
 						<div class="post_season_team_score">1</div>
 					</div>
@@ -216,12 +116,12 @@
 				<div class="post_season_block">
 					<div class="post_season_index">PO 1라운드 2경기<br>(Bo5)</div>
 					<div class="post_season_team win">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2023Worlds/DK.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/Worlds 2023/DK.webp' %}"></div>
 						<div class="post_season_team_name">DK</div>
 						<div class="post_season_team_score">3</div>
 					</div>
 					<div class="post_season_team lose">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2023Worlds/KT.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/Worlds 2023/KT.webp' %}"></div>
 						<div class="post_season_team_name">KT</div>
 						<div class="post_season_team_score">2</div>
 					</div>
@@ -241,12 +141,12 @@
 				<div class="post_season_block" style="margin-bottom: 50px;">
 					<div class="post_season_index">PO 2라운드 1경기*<br>(Bo5)</div>
 					<div class="post_season_team win">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2023Worlds/GEN.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/Worlds 2023/GEN.webp' %}"></div>
 						<div class="post_season_team_name">GEN</div>
 						<div class="post_season_team_score">3</div>
 					</div>
 					<div class="post_season_team lose">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2023Worlds/LSB.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/Worlds 2023/LSB.webp' %}"></div>
 						<div class="post_season_team_name">LSB</div>
 						<div class="post_season_team_score">1</div>
 					</div>
@@ -255,12 +155,12 @@
 				<div class="post_season_block">
 					<div class="post_season_index">PO 2라운드 2경기<br>(Bo5)</div>
 					<div class="post_season_team win">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2023Worlds/T1.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/Worlds 2023/T1.webp' %}"></div>
 						<div class="post_season_team_name">T1</div>
 						<div class="post_season_team_score">3</div>
 					</div>
 					<div class="post_season_team lose">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2023Worlds/DK.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/Worlds 2023/DK.webp' %}"></div>
 						<div class="post_season_team_name">DK</div>
 						<div class="post_season_team_score">2</div>
 					</div>
@@ -279,12 +179,12 @@
 				<div class="post_season_block" style="margin-top: 100px;">
 					<div class="post_season_index">파이널<br>(Bo5)</div>
 					<div class="post_season_team win">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2023Worlds/GEN.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/Worlds 2023/GEN.webp' %}"></div>
 						<div class="post_season_team_name">GEN</div>
 						<div class="post_season_team_score">3</div>
 					</div>
 					<div class="post_season_team lose">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2023Worlds/T1.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/Worlds 2023/T1.webp' %}"></div>
 						<div class="post_season_team_name">T1</div>
 						<div class="post_season_team_score">0</div>
 					</div>
@@ -298,7 +198,7 @@
 		</div>
 	</section>
 
-	<section id="POG">
+	<section id="tournament">
 		<h2>Player of the Game 포인트</h2>
 		<table id="POG_table">
 			<colgroup>
@@ -313,7 +213,7 @@
 			<th>순위</th><th colspan="2">팀</th><th colspan="2">선수</th><th>포인트</th><th>포지션</th>
 			<tr>
 				<td style="background-color: #aaddff;">1</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2023Worlds/GEN.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/Worlds 2023/GEN.webp' %}"></td>
 				<td>Gen.G</td>
 				<td>Ruler</td>
 				<td>박재혁</td>
@@ -322,7 +222,7 @@
 			</tr>
 			<tr>
 				<td style="background-color: #aaddff;">1</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2023Worlds/LSB.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/Worlds 2023/LSB.webp' %}"></td>
 				<td>Liiv SANDBOX</td>
 				<td>Prince</td>
 				<td>이채환</td>
@@ -331,7 +231,7 @@
 			</tr>
 			<tr>
 				<td>3</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2023Worlds/T1.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/Worlds 2023/T1.webp' %}"></td>
 				<td>T1</td>
 				<td>Zeus</td>
 				<td>최우제</td>
@@ -340,7 +240,7 @@
 			</tr>
 			<tr>
 				<td>4</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2023Worlds/KT.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/Worlds 2023/KT.webp' %}"></td>
 				<td>kt Rolster</td>
 				<td>Aiming</td>
 				<td>김하람</td>
@@ -349,7 +249,7 @@
 			</tr>
 			<tr>
 				<td>5</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2023Worlds/DRX.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/Worlds 2023/DRX.webp' %}"></td>
 				<td>DRX</td>
 				<td>Zeka</td>
 				<td>김건우</td>
@@ -358,7 +258,7 @@
 			</tr>
 			<tr>
 				<td>6</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2023Worlds/GEN.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/Worlds 2023/GEN.webp' %}"></td>
 				<td>Gen.G</td>
 				<td>Peanut</td>
 				<td>한왕호</td>
@@ -367,7 +267,7 @@
 			</tr>
 			<tr>
 				<td>6</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2023Worlds/GEN.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/Worlds 2023/GEN.webp' %}"></td>
 				<td>Gen.G</td>
 				<td>Chovy</td>
 				<td>정지훈</td>
@@ -376,7 +276,7 @@
 			</tr>
 			<tr>
 				<td>6</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2023Worlds/DK.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/Worlds 2023/DK.webp' %}"></td>
 				<td>DWG KIA</td>
 				<td>ShowMaker</td>
 				<td>허수</td>
@@ -385,7 +285,7 @@
 			</tr>
 			<tr>
 				<td>9</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2023Worlds/T1.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/Worlds 2023/T1.webp' %}"></td>
 				<td>T1</td>
 				<td>Faker</td>
 				<td>이상혁</td>
@@ -394,7 +294,7 @@
 			</tr>
 			<tr>
 				<td>9</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2023Worlds/LSB.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/Worlds 2023/LSB.webp' %}"></td>
 				<td>Liiv SANDBOX</td>
 				<td>Croco</td>
 				<td>김동범</td>
